# TheNet

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  core.h
core/: CMakeLists.txt
core/src/: core.cpp
gui/: CMakeLists.txt
gui/src/: main.cpp
